--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
                   AWS_REGION: ${{ secrets.AWS_REGION }}
 
             - name: Invalidate CloudFront Cache
-              if: secrets.CLOUDFRONT_DISTRIBUTION_ID != ''
+              if: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} != ''
               run: |
                   aws cloudfront create-invalidation \
                     --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} \
