--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,12 @@ on:
 jobs:
     deploy:
         runs-on: ubuntu-latest
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }}
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
@@ -24,19 +30,10 @@ jobs:
               with:
                   args: --acl public-read --delete
                   source_dir: "dist"
-              env:
-                  AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  AWS_REGION: ${{ secrets.AWS_REGION }}
 
             - name: Invalidate CloudFront Cache
-              if: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} != ''
+              if: env.AWS_CLOUDFRONT_DISTRIBUTION_ID != ''
               run: |
                   aws cloudfront create-invalidation \
-                    --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} \
+                    --distribution-id $AWS_CLOUDFRONT_DISTRIBUTION_ID \
                     --paths "/*"
-              env:
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  AWS_REGION: ${{ secrets.AWS_REGION }}
